# chess

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  __chess_8h_source.html  annotated.html  annotated_dup.js  castling__rights_8h.html  castling__rights_8h.js  castling__rights_8h_source.html  chess_8h.html  chess_8h.js  chess_8h_source.html  classattacks_1_1ChessOffset-members.html  classattacks_1_1ChessOffset.html  classattacks_1_1ChessPieceType-members.html  classattacks_1_1ChessPieceType.html  classes.html  color_8h.html  color_8h.js  color_8h_source.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a469c1a447a1fbb4c350399e58cec756.html  dir_a469c1a447a1fbb4c350399e58cec756.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e0aef313599eac671f160072b95549f2.html  dir_e0aef313599eac671f160072b95549f2.js  file_8h.html  file_8h.js  file_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+77 more)
.github/workflows/: cmake-multi-platform.yml
doc/: Doxyfile
docs/: Doxyfile
include/: chess.h
include/chess/: castling_rights.h  color.h  file.h  macros.h  move.h  moves.h  piece.h  piece_type.h  position.h  position_counter.h  rank.h  square.h  types.h
scripts/: attacks.py  moves.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: _chess.c  _main.c  chess.c  cli.c  main.c
src/chess/: castling_rights.c  color.c  file.c  macros_private.h  move.c  move_private.h  moves.c  offset.h  piece.c  piece_type.c  position.c  position_counter.c  position_private.h  rank.c  square.c
test/: test_chess.c
tests/: CMakeLists.txt  test_chess.c
tests/chess/: color.c  file.c  move.c  moves.c  piece.c  piece_type.c  position_counter.c  rank.c  square.c
